# he-compliant-approximation

./: .gitignore  README.md  pipeline_steps.json  pyproject.toml  setup.cfg
docs/source/: approximation_resources.rst  cli.rst  conf.py  controller.rst  index.rst  installation.rst  repository_structure.rst  resources.rst
docs/source/approximators/: activation.rst  attention.rst  index.rst  layer_normalization.rst  multihead.rst  pooling.rst  softmax.rst
docs/source/models/: index.rst  lenet.rst  vanilla_transformer.rst
docs/source/pipeline/: approximation_pipeline.rst  index.rst  pipeline.rst
examples/: lenet_approximation.ipynb  vision_models_for_classification.ipynb
pipeline_steps/: without_approximations.json
pipeline_steps/LeNet/: pipeline_steps_Q.json  without_approximations.json
pipeline_steps/lenet/: pipeline_steps_AVGpool.json  pipeline_steps_AVGpool_Q.json  pipeline_steps_AVGpool_TQ1.json  pipeline_steps_TQ1.json  without_approximations.json
pipeline_steps/vanilla_transformer/: pipeline_steps_BN_TQ1.json  pipeline_steps_TQ1.json  without_approximations.json
pipeline_steps/vision_models_for_classification/lenet/: without_approximations.json
src/hela/approximation/: aliases.py  controller.py  module_to_approximate.py  pipeline_steps.py
src/hela/approximation/approximators/: core.py
src/hela/approximation/approximators/activation/: quadratic.py  trainable_quadratic.py
src/hela/approximation/approximators/attention/query_key_product/: not_scaled.py
src/hela/approximation/approximators/layer_normalization/: batch_normalization.py  distill_layernorm.py
src/hela/approximation/approximators/multihead/: customizable_multihead.py
src/hela/approximation/approximators/pooling/: avg_pooling_2d.py
src/hela/approximation/approximators/softmax/: mlp_softmax.py  polynomial.py  taylor.py
src/hela/approximation/pipeline/: approximation_pipeline.py  core.py  testing.py  training.py
src/hela/cli/: alexnet_approximation.py  lenet_approximation.py  molecular_transformer_approximation.py  squeezenet_approximation.py  testing_approximation_lenet.py  testing_approximation_pipeline_vanilla_transformer.py  training_approximation_lenet.py  training_approximation_pipeline_vanilla_transformer.py  vanilla_transformer_testing.py  vanilla_transformer_training.py  vision_model_for_classification.py
src/hela/metrics/: text_sequence_matching.py
src/hela/models/alexnet/: configuration.py  model.py
src/hela/models/lenet/: configuration.py  model.py
src/hela/models/squeezenet/: configuration.py  model.py
src/hela/models/tokenizers/: smiles.py
src/hela/models/vanilla_transformer/: configuration.py  model.py
src/hela/pytorch_lightning/datasets/: mnist.py  smiles.py  torchvision_image_classification.py
src/hela/pytorch_lightning/models/: core.py  language_model_for_generation.py  vision_model_for_classification.py
src/hela/pytorch_lightning/models/approximations/: alexnet.py  core.py  language_model_for_generation.py  lenet.py  squeezenet.py  vanilla_transformer.py  vision_model_for_classification.py
src/hela/pytorch_lightning/models/language/: vanilla_transformer.py
src/hela/pytorch_lightning/models/vanilla_transformer/: model.py
src/hela/pytorch_lightning/models/vision/: alexnet.py  lenet.py  squeezenet.py
src/hela/resources/approximation/: aliases.json
src/hela/resources/models/tokenizers/: smiles_vocab.txt
src/hela/utils/: logging.py
src/henets/approximation/: aliases.py
src/henets/approximation/approximators/activation/: quadratic.py
src/henets/approximation/approximators/attention/masking/: multiplicative.py
src/henets/approximation/approximators/pooling/: avg_pooling_2d.py
src/henets/approximation/pipeline/: approximation_pipeline.py
src/henets/cli/: molecular_transformer_approximation.py  vanilla_transformer_testing.py  vanilla_transformer_training.py  vision_model_for_classification.py
src/henets/metrics/: text_sequence_matching.py
src/henets/models/alexnet/: configuration.py
src/henets/models/squeezenet/: configuration.py
src/henets/models/tokenizers/: smiles.py
src/henets/pytorch_lightning/datasets/: smiles.py  torchvision_image_classification.py
src/henets/pytorch_lightning/models/: core.py
src/henets/pytorch_lightning/models/language/: vanilla_transformer.py
src/henets/pytorch_lightning/models/vision/: lenet.py  squeezenet.py
src/henets/resources/approximation/: aliases.json
tests/: test_alexnet.py  test_approximation_controller.py  test_approximators.py  test_lenet.py  test_pipeline.py  test_resources.py  test_squeezenet.py  test_vanilla_decoder.py  test_vanilla_encoder.py  test_vanilla_transformer.py  test_vanilla_transformer_configuration.py
