[metadata]
name = hela
version = attr: hela.__version__
description = Homomorphic encryption compliant learnable approximations
author = Alessio Bray
author_email = alessio.bray@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
pacakges = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    transformers>=4.0.0,<=4.38.2
    torch>=1.5.0,<2.0
    torchmetrics>=1.0
    torchvision>=0.6.0,<=0.17.0
    pytorch_lightning>=1.5.10,<=1.6.5
    pydantic>=2.0.0,<=2.1.1
    importlib_resources>=5.10.0
    importlib_metadata>=1.4
    rxn-chem-utils>=1.0.3

[options.packages.find]
where = src

[options.package_data]
hela =
    py.typed
    resources/approximation/aliases.json
    resources/models/tokenizers/smiles_vocab.txt

[options.extras_require]
dev =
    black>=22.3.0
    flake8>=3.7.9
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit-pypi>=2021.3.2 ; python_version<"3.7"
    rdkit>=2022.3.4 ; python_version>="3.7"

[options.entry_points]
console_scripts=
    molecular-transformer-pipeline = hela.cli.molecular_transformer_approximation:main
    lenet-pipeline = hela.cli.lenet_approximation:main
    alexnet-pipeline = hela.cli.alexnet_approximation:main
    squeezenet-pipeline = hela.cli.squeezenet_approximation:main
    vanilla-transformer-train = hela.cli.vanilla_transformer_training:main
    vanilla-transformer-test = hela.cli.vanilla_transformer_testing:main

[flake8]
extend-ignore = E203, E501, E266
